# bmi

./: .codespellrc  .gitignore  .gitmessage.txt  .npmrc  .replit  .tool-versions  .vercelignore  .yamllint  BRANDING.md  CHANGELOG.md  DEPLOYMENT.md  DORMANT.md  LICENSE.md  MAINTENANCE_GUIDE.md  OPTIMIZATION_APPLIED.md  OPTIMIZATION_COMPLETE.md  README.md  ROADMAP.md  RULES.md  SECURITY.md  STORAGE_UPGRADE_SUMMARY.md  TRADEMARK.md  WEB_ONLY_MIGRATION.md  build.sh  codemagic.yaml  commit_msg.txt  dev.sh  eslint.config.js  generate-icons.sh  info.sh  install-arch.sh  next.config.js  package-local.json  package-lock.json  package.json  postcss.config.js  replit.md  setup-android-env.sh  stats.html  svelte.config.js  (+8 more)
.github/: AUTO_MERGE_SETUP.md  AUTO_UPDATE.md  BUILD_COMMANDS.md  CODEQL_SETUP.md  CONTRIBUTING.md  RELEASE.md  RETRIGGER_RELEASE.md  WORKFLOW_FIXES.md  WORKFLOW_STYLE_GUIDE.md  WORKFLOW_UPDATES.md  dependabot.yml
.next/: trace
attached_assets/: Pasted-rezky-nightky-on-zenpc-BMI-oxy-via-Node-js-v24-5-0-took-1m19s-l-Permissions-Size-User--1754236905039_1754236905039.txt
docs/: furthermore.md
notes/: ANDROID_BUILD_GUIDE.md  APPIMAGE_FIX.md  APPIMAGE_ISSUE.md  ARCH_LINUX_SETUP.md  ARCH_LINUX_USAGE.md  BUILD_OPTIMIZATION.md  BUILD_SUCCESS.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  DESKTOP_VS_WEB.md  ICON_AND_BUILD_CONFIG.md  LINUX_BUILD_GUIDE.md  MAINTENANCE_GUIDE.md  (+3 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
(+374 files in other folders)
